# cq_enclosure_builder

./: .gitignore  README.md  setup.cfg
examples/: 00_all_examples.ipynb  01_panel_with_button.py  02_default_part_type_and_parameters.py  03_panel_optional_params.py  04_enclosure_with_button.py  05_export_enclosure_stls.py  06_5_enclosure_custom_screws.py  06_enclosure_optional_params.py  07_layout_builder_simple_line.py  08_layout_builder_fixed_width_line.py  09_layout_buider_fixed_width_line_centre_at_0_0.py  10_layout_builder_grid_of_parts.py  11_layout_builder_combining_groups.py  12_text.py  13_support_for_part.py  14_all_parts.py  14_holders_for_pi_and_protoboard.py  15_add_new_part.py  16_add_new_part_from_step.py  16_all_parts.py  16_mask.step  16_part.step  17_all_parts.py  basic.py  debug_layout_markers.py  dev-panel.ipynb  jupyter_helpers.py  sandbox.ipynb  strength_test_enclosures.py
src/cq_enclosure_builder/: __init__.py  constants.py  enclosure.py  face.py  knob_or_cap.py  panel.py  panel_size.py  part.py  parts_factory.py  parts_factory_protocol.py  project_info.py
src/cq_enclosure_builder/layout_builder/: __init__.py  layout_element.py  layout_group.py
src/cq_enclosure_builder/parts/: __init__.py  __template.py
src/cq_enclosure_builder/parts/air_vent/: __init__.py  fan_size.py  rect_air_vent_part.py
src/cq_enclosure_builder/parts/banana/: __init__.py  banana_4mm.py  banana_xxx.py
src/cq_enclosure_builder/screws/: __init__.py  flat_head_parameters.csv  flat_head_screw.py
src/cq_enclosure_builder/utils/: __init__.py  workplane_utils.py
(+76 files in other folders)
