[metadata]
name = cq_enclosure_builder
version = 0.9.0
author = Raphaël Isvelin
description = Generate printable enclosures for projects in a few lines of code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raphael-isvelin/cq_enclosure_builder
project_urls =
    Bug Tracker = https://github.com/raphael-isvelin/cq_enclosure_builder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0 License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Multimedia :: Graphics :: 3D Modeling
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
   cadquery>=2.3.0
   cq_warehouse>=0.8.0
include_package_data = True

[options.packages.find]
where = src
exclude = *examples*

[options.package_data]
* = *.csv
# Add other types of files your package includes, if any

